// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<ContextProvider
  value={
    Object {
      "breakpoint": Object {
        "lg": "1184px",
        "md": "980px",
        "mg": "1920px",
        "sm": "768px",
        "xl": "1366px",
        "xs": "480px",
      },
      "color": Object {
        "brand100": "hsla(23,92%,95%,1)",
        "brand200": "hsla(23,92%,82%,1)",
        "brand300": "hsla(23,92%,67%,1)",
        "brand400": "hsla(23,92%,52%,1)",
        "brand500": "hsla(23,92%,35%,1)",
        "brand600": "hsla(23,92%,18%,1)",
        "dark100": "hsla(44,8%,95%,1)",
        "dark200": "hsla(44,8%,82%,1)",
        "dark300": "hsla(44,8%,67%,1)",
        "dark400": "hsla(44,8%,52%,1)",
        "dark500": "hsla(44,8%,35%,1)",
        "dark600": "hsla(44,8%,18%,1)",
        "light": "hsla(0,100%,100%, 1)",
        "withTransparency": Object {
          "brand100": "hsla(23,92%,95%,.5)",
          "brand200": "hsla(23,92%,82%,.5)",
          "brand300": "hsla(23,92%,67%,.5)",
          "brand400": "hsla(23,92%,52%,.5)",
          "brand500": "hsla(23,92%,35%,.5)",
          "brand600": "hsla(23,92%,18%,.5)",
          "dark100": "hsla(44,8%,95%,.5)",
          "dark200": "hsla(44,8%,82%,.5)",
          "dark300": "hsla(44,8%,67%,.5)",
          "dark400": "hsla(44,8%,52%,.5)",
          "dark500": "hsla(44,8%,35%,.5)",
          "dark600": "hsla(44,8%,18%,.5)",
          "light": "hsla(0,100%,100%, .5)",
        },
      },
      "typography": Object {
        "__esModule": true,
        "baseFontSize": Size {
          "_rank": 2,
        },
        "baseLineHeight": "normal",
        "primaryFont": Object {
          "fontFamily": "Merriweather, Georgia, serif",
          "hover": "hsla(44,8%,18%,1)",
        },
        "secondaryFont": Object {
          "fontFamily": "Lato, Geneva, Tahoma, sans-serif",
          "hover": "hsla(44,8%,18%,1)",
        },
      },
      "zIndexRank": Object {
        "0": "0",
        "1": "100",
        "2": "200",
        "3": "300",
        "4": "400",
        "5": "500",
        "6": "600",
        "7": "700",
        "8": "800",
        "9": "900",
        "bottom": "-100",
        "top": "1000",
      },
    }
  }
>
  <Button />
</ContextProvider>
`;

exports[`Button renders correctly with context 1`] = `
<ContextProvider
  value={
    Object {
      "breakpoint": Object {
        "lg": "1184px",
        "md": "980px",
        "mg": "1920px",
        "sm": "768px",
        "xl": "1366px",
        "xs": "480px",
      },
      "color": Object {
        "brand100": "hsla(23,92%,95%,1)",
        "brand200": "hsla(23,92%,82%,1)",
        "brand300": "hsla(23,92%,67%,1)",
        "brand400": "hsla(23,92%,52%,1)",
        "brand500": "hsla(23,92%,35%,1)",
        "brand600": "hsla(23,92%,18%,1)",
        "dark100": "hsla(44,8%,95%,1)",
        "dark200": "hsla(44,8%,82%,1)",
        "dark300": "hsla(44,8%,67%,1)",
        "dark400": "hsla(44,8%,52%,1)",
        "dark500": "hsla(44,8%,35%,1)",
        "dark600": "hsla(44,8%,18%,1)",
        "light": "hsla(0,100%,100%, 1)",
        "withTransparency": Object {
          "brand100": "hsla(23,92%,95%,.5)",
          "brand200": "hsla(23,92%,82%,.5)",
          "brand300": "hsla(23,92%,67%,.5)",
          "brand400": "hsla(23,92%,52%,.5)",
          "brand500": "hsla(23,92%,35%,.5)",
          "brand600": "hsla(23,92%,18%,.5)",
          "dark100": "hsla(44,8%,95%,.5)",
          "dark200": "hsla(44,8%,82%,.5)",
          "dark300": "hsla(44,8%,67%,.5)",
          "dark400": "hsla(44,8%,52%,.5)",
          "dark500": "hsla(44,8%,35%,.5)",
          "dark600": "hsla(44,8%,18%,.5)",
          "light": "hsla(0,100%,100%, .5)",
        },
      },
      "typography": Object {
        "__esModule": true,
        "baseFontSize": Size {
          "_rank": 2,
        },
        "baseLineHeight": "normal",
        "primaryFont": Object {
          "fontFamily": "Merriweather, Georgia, serif",
          "hover": "hsla(44,8%,18%,1)",
        },
        "secondaryFont": Object {
          "fontFamily": "Lato, Geneva, Tahoma, sans-serif",
          "hover": "hsla(44,8%,18%,1)",
        },
      },
      "zIndexRank": Object {
        "0": "0",
        "1": "100",
        "2": "200",
        "3": "300",
        "4": "400",
        "5": "500",
        "6": "600",
        "7": "700",
        "8": "800",
        "9": "900",
        "bottom": "-100",
        "top": "1000",
      },
    }
  }
>
  <Button
    context="accent"
  />
</ContextProvider>
`;
